--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "endpoints_and_axios",
   "version": "0.1.0",
   "private": true,
+  "main": "server",
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
@@ -12,6 +17,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
